Bug 378526 - KMail 5.4.3: Attachment displayed with wrong filename
Summary: KMail 5.4.3: Attachment displayed with wrong filename
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-07 08:03 UTC by Axel Braun
Modified: 2017-05-09 14:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2017-04-07 08:03:37 UTC
I have an attachment in an Email, say 'Document.odt'
When I open(Display/save it, is handled as 'messageviewer_iH5698', and this is as well the name proposed for saving the document.

Expected behaviour: Filename is used as in attachment (Document.odt)
Comment 1 Laurent Montel 2017-05-09 14:06:15 UTC
Git commit cbbe13d470caa4b20505009f27888fcde6cd22b5 by Montel Laurent.
Committed on 09/05/2017 at 14:05.
Pushed by mlaurent into branch 'Applications/17.04'.

Fix Bug 378526 - KMail 5.4.3: Attachment displayed with wrong filename

FIXED-IN: 5.5.2

M  +1    -1    messageviewer/src/viewer/viewer_p.cpp

https://commits.kde.org/messagelib/cbbe13d470caa4b20505009f27888fcde6cd22b5