Fix Bug 378526 - KMail 5.4.3: Attachment displayed with wrong filename

FIXED-IN: 5.5.2
BUG: 378526